# gservice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: demo.cpp
demo/proto/: demo.proto  ovlexp.proto
include/: gservice.h  query_content.h
proto/: gservice.proto
src/: gservice.cpp  main.cpp
